<?xml version="1.0"?>
<package format="3">
  <name>crocoddyl</name>
  <version>1.5.0</version>
  <description>Crocoddyl optimal control library</description>
  <!-- The maintainers listed here are for receiving emails e.g. from the ROS buildfarm.
  Please check the README.md at the repository URL for additional detail. -->
  <maintainer email="carlos.mastalli@gmail.com">Carlos Mastalli</maintainer>
  <maintainer email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</maintainer>

  <!-- Please refer to README.md for list of authors/credits. -->
  <license>BSD</license>

  <url type="website">https://github.com/loco-3d/crocoddyl</url>

  <build_depend>git</build_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <depend>boost</depend>
  <depend>eigenpy</depend>
  <depend>example-robot-data</depend>
  <depend>pinocchio</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
