SET(${PROJECT_NAME}_PYTHON_SOURCES
  crocoddyl.cpp
  )

SET(PYTHON_FILES
  __init__.py
  )

ADD_LIBRARY(${PROJECT_NAME}_pywrap SHARED ${${PROJECT_NAME}_PYTHON_SOURCES})
PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME}_pywrap eigen3)
PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME}_pywrap eigenpy)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}_pywrap ${PROJECT_NAME})
TARGET_LINK_BOOST_PYTHON(${PROJECT_NAME}_pywrap)
INSTALL(TARGETS ${PROJECT_NAME}_pywrap DESTINATION ${PYTHON_SITELIB}/${PROJECT_NAME})


FOREACH(python ${PYTHON_FILES})
  INSTALL(FILES
    "${${PROJECT_NAME}_SOURCE_DIR}/bindings/crocoddyl/python/${python}"
    DESTINATION ${PYTHON_SITELIB}/${PROJECT_NAME})
ENDFOREACH(python)